2017-0x-xx 0.17 [xxxxxxx]
  + ...
2017-09-11 0.16.2 [146b4e4]
  + bugfix: install uses less global paths for app icon
2017-09-10 0.16.1 [ce19eb3]
  + bugfix: desktop file is included in src distribution
2017-05-24 0.16 [ac34c09]
  + Classifier drawings represent the classifier type
2017-04-14 0.15 [69a0f6a]
  + Arrow, line and feather types of connectors are determined by relation type
  + A reset button clears the current selection
  + Relations are auto-layouted in a nicer way
2017-03-18 0.14 [097b793]
  + Classifiers are layouted avoiding overlaps
2017-02-25 0.13 [ff3b72f]
  + The txt-file export contains features and relationships
  + The user can export pdf and ps formats
  + The user is able to import features from the clipboard
  + The user is able to export relationships and features to the clipboard
2017-02-12 0.12 [7e37cf9]
  + Features can be created, modified, deleted (incl. undo/redo)
2017-02-05 0.11 [655350d]
  + Align objects vertically and horizontally (snap)
  + Edit new classifiers or relationships immediately
2017-01-28 0.10 [e93e7ec]
  + Relationships can be created, modified, deleted (incl. undo/redo)
  . DB format changed: features.key is not UNIQUE anymore (compatible change)
2016-12-22 0.09 [6d5cfac]
  + Mark and instantiate classifiers
  + Test the database for errors and fix them
  + Diagrams show also non-ascii names now
2016-12-11 0.08 [225a0cf]
  + Export of png and svg diagrams and txt descriptions
  . DB format changed: classifier.name is UNIQUE, features.key is UNIQUE (compatible change)
2016-11-26 0.07 [874f539]
  + The user can move classifiers
2016-10-06 0.06 [e2b0e01]
  + cut+copy+paste allow to copy diagrams and classifiers to and from the clipboard
2016-08-12 0.05 [fbae0f5]
  + The program integrates into a freedesktop.org desktop
  + rpm and deb installers are generated
  + undo/redo works for creating, modifying and deleting objects
2016-07-03 v004 [09e8ac4]
  + The user can delete classifiers and diagrams